--- a/website_files/work-order.html
+++ b/website_files/work-order.html
@@ -94,35 +94,34 @@
 		</div>
 
 		<div class="d-flex flex-column align-items-center bolder">
-			<p>
-				The Association is excited to share our new electronic work order system
-				with you.
-			</p>
-			<br />
 			<p id="contactBlurb">
-				<span class="underline"
-					>***Please continue to contact Maintenance directly at 210-464-5434 if
-					you have an active leak! <br />
+				<span class="underline big"
+					>***In case of any emergency maintenance issue, please contact our on
+					call maintenance team at 210-464-5434.***
+
+					<br />
 					We will be able to react quickly and avoid possible damage to your
-					unit and other areas.***</span
+					unit and other areas.</span
 				>
 			</p>
 			<br />
 
-			<p>
-				The work orders are for repairs at your unit at
-				<span class="underline">common areas/responsibilities</span> such as :
-			</p>
-			<ul>
-				<li>screen repair & replacements</li>
-				<li>front door maintenance & repair</li>
-				<li>window maintenance & repair</li>
-				<li>glass sliding door maintenance & repair</li>
-				<li>patio fence maintenance & repair</li>
-				<li>outside siding maintenance & repair</li>
-			</ul>
-			
-			<br />
+			<div class="work-order-font">
+				<p>
+					The work orders are for repairs at your unit at
+					<span class="underline">common areas/responsibilities</span> such as :
+				</p>
+				<ul>
+					<li>screen repair & replacements</li>
+					<li>front door maintenance & repair</li>
+					<li>window maintenance & repair</li>
+					<li>glass sliding door maintenance & repair</li>
+					<li>patio fence maintenance & repair</li>
+					<li>outside siding maintenance & repair</li>
+				</ul>
+			</div>
+
+			<!-- <br /> -->
 			<div class="d-flex justify-content-center py-5">
 				<a
 					href="https://app.clickmaint.com/portal/23ae9c5c-a62b-4ad5-8fe8-1ab95c274547"
@@ -132,7 +131,7 @@
 					>Submit a Work Order</a
 				>
 			</div>
-			<br />
+			<!-- <br /> -->
 
 			<p>Here's how to place a work order online:</p>
 			<ol class="d-flex flex-column align-items-center">
